crates/plotnik-lib/tests/02-parser/recovery_validation/negated_field_in_labeled_branch.txt
Q = [
  Foo: -key
  Bar: (pair)
]
------------------ DIAGNOSTICS -------------------
error: negated fields cannot appear directly in alternations
 --> query.ptk:2:8
  |
2 |   Foo: -key
  |        ^^^^
  |
help: negate the field inside a node branch: `[(a -field) (b)]`
